<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/register_new_driver"
        android:textSize="36sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailF"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailFieldR"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordF"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_below="@id/emailF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordFieldR"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameF"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_below="@id/passwordF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameF"
        android:text="@string/register"
        android:onClick="CreateAccount"/>

</RelativeLayout>